--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 assets/models filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
+*.gltf filter=lfs diff=lfs merge=lfs -text
